--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -37,8 +37,9 @@
     </div>
 
     <div class="container">
-
       <div id="jiathis_main" class="content">
+		<div style="padding: 10px 20px;background: #046D8B;color: white;border-radius: 5px;font-size: 30px;line-height: 36px;margin-bottom: 30px;">{{ site.tip }}</div>
+		<div style="clear:both;"></div>
         {{ content }}
       </div>
 
