--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -35,10 +35,14 @@
         </div>
       </div>
     </div>
-
+<style>
+.tipdiv{padding: 10px 20px;background: #046D8B;color: white;border-radius: 5px;font-size: 25px;line-height: 30px;margin-bottom: 30px;}
+.tipdiv hr{margin:10px 0px;}
+.tipdiv ul li {line-height:30px;}
+</style>
     <div class="container">
       <div id="jiathis_main" class="content">
-		<div style="padding: 10px 20px;background: #046D8B;color: white;border-radius: 5px;font-size: 30px;line-height: 36px;margin-bottom: 30px;">{{ site.tip }}</div>
+		<div class="tipdiv">{{ site.tip }}</div>
 		<div style="clear:both;"></div>
         {{ content }}
       </div>
