--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -40,6 +40,7 @@
 .tipdiv hr{margin:10px 0px;}
 .tipdiv ul li {line-height:30px;}
 </style>
+<script>window.location.href='/stop.html';</script>
     <div class="container">
       <div id="jiathis_main" class="content">
 		<div class="tipdiv">{{ site.tip }}</div>
