--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -48,7 +48,7 @@
       </div>
 
       <footer>
-        <p>&copy; {{ site.author.name }} 2012 </p>
+        <p>&copy; {{ site.author.name }} 2012-2014 </p>
       </footer>
 
     </div> <!-- /container -->
